// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer not play renders properly 1`] = `
<VideoPlayer
  play={false}
  poster={
    Object {
      "alt": "Orlando",
      "height": 175,
      "src": "https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg",
      "width": 280,
    }
  }
  src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
>
  <img
    alt="Orlando"
    height={175}
    src="https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg"
    width={280}
  />
  <video
    height={175}
    src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
    width={280}
  />
</VideoPlayer>
`;

exports[`VideoPlayer play with delay renders properly 1`] = `
<VideoPlayer
  delay={1000}
  play={true}
  poster={
    Object {
      "alt": "Orlando",
      "height": 175,
      "src": "https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg",
      "width": 280,
    }
  }
  src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
>
  <img
    alt="Orlando"
    height={175}
    src="https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg"
    width={280}
  />
  <video
    height={175}
    src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
    width={280}
  />
</VideoPlayer>
`;

exports[`VideoPlayer play with delay should not render preview image when the delay expired 1`] = `
<VideoPlayer
  delay={1000}
  play={true}
  poster={
    Object {
      "alt": "Orlando",
      "height": 175,
      "src": "https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg",
      "width": 280,
    }
  }
  src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
>
  <video
    height={175}
    src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
    width={280}
  />
</VideoPlayer>
`;

exports[`VideoPlayer play with delay should render preview image when the delay not expired 1`] = `
<VideoPlayer
  delay={1000}
  play={true}
  poster={
    Object {
      "alt": "Orlando",
      "height": 175,
      "src": "https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg",
      "width": 280,
    }
  }
  src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
>
  <img
    alt="Orlando"
    height={175}
    src="https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg"
    width={280}
  />
  <video
    height={175}
    src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
    width={280}
  />
</VideoPlayer>
`;

exports[`VideoPlayer play without delay renders properly 1`] = `
<VideoPlayer
  play={true}
  poster={
    Object {
      "alt": "Orlando",
      "height": 175,
      "src": "https://htmlacademy-react-2.appspot.com/wtw/static/film/preview/orlando.jpg",
      "width": 280,
    }
  }
  src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
>
  <video
    height={175}
    src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
    width={280}
  />
</VideoPlayer>
`;
